--- a/style.css
+++ b/style.css
@@ -1,331 +1,273 @@
+/* layout-------------------- */
 body {
-  background: #eae8fe;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-width: 360px;
-  margin-bottom: 40px;
+  font-family: 'Noto Sans KR', sans-serif;
+  min-width: 396px;
 }
-
-main {
-  display: flex;
-  justify-content: center;
+/* h1 */
+h1 {
+  text-align: center;
 }
-
-header {
-  margin-bottom: 68px;
-}
-
-header a {
+h1 img {
   width: 386px;
-  height: 180px;
-  display: block;
+  max-width: calc(100% - (97px * 2));
+}
+section {
+  background: #fff;
 }
 
-header h1 img {
-  width: inherit;
+/* pc */
+@media (min-width: 748px) {
+  body {
+    background: #eae8fe;
+  }
+
+  main {
+    width: 748px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px auto;
+    grid-template-areas:
+      'section1 section2'
+      'section1 section3';
+    gap: 20px 28px;
+  }
+
+  section {
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+
+  .section1 {
+    grid-area: section1;
+  }
+
+  .section2 {
+    grid-area: section2;
+  }
+
+  .section3 {
+    grid-area: section3;
+  }
+  h1 {
+    margin-bottom: 68px;
+  }
+}
+/* mobile */
+@media (max-width: 747px) {
+  body {
+    background: #eae8fe;
+    padding: 30px;
+  }
+  main {
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+      rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  }
+
+  main {
+    background: #fff;
+    border-radius: 10px;
+    padding: 10px;
+  }
+
+  h1 {
+    margin-bottom: 18px;
+  }
 }
 
-/* 자판기 섹션 */
-.vanding {
-  box-sizing: border-box;
-  width: 360px;
-  height: 545px;
-  background: #ffffff;
-  margin-right: 18px;
+/* 버튼 효과 */
+button {
+  position: relative;
+  width: 100%;
+  border-radius: 10px;
+  transition: 0.2s;
+  opacity: 0.8;
+  top: -2px;
+}
+button:hover:not(:disabled) {
+  opacity: 1;
+}
+button:active:not(:disabled) {
+  top: 0px;
+  box-shadow: none;
+}
+
+.section1 {
   padding: 31px 27px 28px;
 }
-
-/* 자판기 섹션 - 메뉴 선택 */
-.menu {
+/* 판매 음료 */
+.cola-list {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  /* grid-template-rows: 1fr 1fr; */
+  grid-template-columns: repeat(3, 1fr);
   gap: 12px;
-  margin-bottom: 20px;
 }
 
-button:not(.get, .item:nth-child(2)) {
-  box-shadow: 0px 0px 3px 1px #bdbdbd;
-  border: none;
-  background-color: #fff;
-  cursor: pointer;
+.btn-cola {
+  padding: 11px 12px 9px;
+  box-shadow: #6327fe 0px 4px 0px;
+  border: 2px solid #6327fe;
 }
 
-.menu > .item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  box-sizing: padding-box;
-
-  width: 94px;
-  height: 130px;
+.cola-img,
+.cola-name,
+.cola-price {
+  display: block;
 }
-
-.menu > .item:not(.item:nth-child(2)):hover {
-  box-shadow: 0px 0px 0px 3px #6327fe;
-}
-
-.vanding .menu > button {
-  border-radius: 10px;
-}
-
-.menu > .item > .soldout {
-  width: inherit;
-  height: inherit;
-  background: rgba(0, 0, 0, 0.8);
-  position: absolute;
-  border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.menu > .item > .soldout > img {
-  width: 70px;
-}
-
-.vanding .item img {
+.cola-img {
   width: 36px;
-  height: 65px;
+  margin: auto;
 }
-
-.vanding .name {
+.cola-name {
   font-size: 9px;
   margin: 6px 0;
 }
-
-.vanding .price {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 70px;
-  height: 22px;
-  background: #6327fe;
-  color: #ffffff;
-  border-radius: 50px;
+.cola-price {
   font-size: 12px;
-}
-
-/* 자판기 섹션 - 설정 setting */
-.setting {
-  display: grid;
-  grid-template-areas:
-    'a b'
-    'c d'
-    'e f'
-    'e f';
-  grid-template-columns: 200px 1fr;
-  gap: 12px;
-}
-
-.setting .money {
-  grid-area: a;
-}
-
-.return {
-  grid-area: b;
-  padding: none;
-
-  font-size: 13px;
-}
-
-.setting.form {
-  grid-area: c;
-}
-
-.deposit {
-  grid-area: d;
-}
-
-.setting > .cart {
-  grid-area: e;
-  height: 106px;
-}
-
-.get {
-  grid-area: f;
-  color: #fff;
-  box-shadow: 0px 0px 3px 1px #bdbdbd;
-  border: none;
+  font-weight: 500;
   background: #6327fe;
-  cursor: pointer;
+  color: #fff;
+  padding: 2px 0;
+  border-radius: 20px;
 }
 
-/* .setting .cart article {
-  flex: 7;
-} */
-
-.setting #enter-price {
+.soldout {
+  background: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 33px;
-  box-sizing: border-box;
-  padding: 6px;
+  height: 100%;
+  border-radius: 8px;
+}
+.soldout span {
+  display: inline-block;
+  color: #eae8fe;
+  border: 6px double #eae8fe;
+  padding: 0 8px;
+  transform: rotate(-20deg) translate(-10px, 30px);
+}
+
+/* 잔액 및 장바구니 */
+.container {
+  display: grid;
+  grid-template-columns: auto calc((100% - 24px) / 3);
+  grid-template-rows: 32px 32px 106px;
+  gap: 12px;
+  margin-top: 20px;
+}
+.bg-box {
+  background: #eae8fe;
   border-radius: 5px;
-  border: 1px solid #bdbdbd;
-}
-
-.setting #enter-price::placeholder {
-  color: #bdbdbd;
-}
-
-.setting button {
-  border-radius: 5px;
-}
-
-/* 소지금 total */
-
-.total {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 6px 10px;
+}
+.bg-box .title,
+.bg-box p {
+  font-size: 14px;
+  font-weight: 500;
+}
+.bg-box .title::after {
+  content: ' :';
 }
 
-.box1 {
-  box-sizing: border-box;
-  width: 360px;
-  height: 50px;
-  background: #ffffff;
-  margin-bottom: 20px;
+/* section2 */
+.section2 {
   padding: 9px 27px;
 }
 
-.money {
-  height: 33px;
+.btn,
+.btn-get {
+  border-radius: 5px;
+  font-size: 13px;
+}
+.btn {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  border: 0.5px solid #bdbdbd;
+}
+.btn:hover {
+  border: 2px solid #6327fe;
+}
+
+.btn-get {
+  background: #6327fe;
+  color: #fff;
+  box-shadow: #411aa3 0px 4px 2px;
+}
+
+#input-money {
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+  padding: 0 6px;
+  font-size: 13px;
+}
+#input-money::placeholder {
+  color: #bdbdbd;
+}
+
+#input-money:focus {
+  outline: 2px solid #6327fe;
+}
+
+.get-list {
   background: #eae8fe;
   border-radius: 5px;
-  padding: 6px 10px;
-  box-sizing: border-box;
+  border: 1px solid #bdbdbd;
+  overflow-y: auto;
+  padding: 12px;
+}
+.get-list li {
+  background: #fff;
+  border-radius: 5px;
+  padding: 8px;
+  font-size: 9px;
   display: flex;
   align-items: center;
+  gap: 10px;
+}
+.get-list li:first-child ~ li {
+  margin-top: 6px;
+}
+.get-list li img {
+  width: 18px;
+}
+.get-list li strong {
   font-size: 14px;
-}
-.text {
-  flex: 7;
-}
-.amount {
-  font-weight: 700;
-  margin-bottom: 1px;
-}
-
-/* 획득한 음료 current */
-
-.box2 {
-  width: 360px;
-  height: 474px;
-  background: #ffffff;
-  box-sizing: border-box;
-  padding: 25px 27px;
+  border: 1px solid #bdbdbd;
+  border-radius: 5px;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+  margin-left: auto;
+  /* margin: auto 0 auto auto; */
 }
 
-.box2 h2 {
+.section3 {
+  padding: 25px 27px 26px;
+}
+
+.get-title {
   font-size: 14px;
   text-align: center;
   margin-bottom: 13px;
 }
-
-.box2 .cart {
-  height: 364px;
-}
-
-/* cart 설정 */
-.cart {
-  border: 1px solid #bdbdbd;
-  border-radius: 6px;
-  padding: 12px;
-  overflow-y: scroll;
-  box-sizing: border-box;
-  background: #eae8fe;
-}
-
-.cart::-webkit-scrollbar {
-  width: 4px;
-}
-
-.cart::-webkit-scrollbar-thumb {
-  background: #fff;
-  border-radius: 50px;
-}
-
-.cart article {
-  height: 46px;
-  background: #ffffff;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  padding: 8px 8px 8px 10px;
-  box-sizing: border-box;
-  margin-bottom: 6px;
-}
-
-.cart article img {
-  width: 18px;
-}
-article .item {
-  flex: 8;
-  padding-left: 10px;
-  font-size: 9px;
-}
-
-.count {
-  font-size: 14px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  width: 30px;
-  height: 30px;
-  border: 1px solid #bdbdbd;
-  border-radius: 5px;
-  box-sizing: border-box;
-}
-
-.box2 .total-price {
+.total-price {
   font-size: 12px;
-  float: right;
+  text-align: right;
   margin-top: 6px;
 }
-
-@media (max-width: 738px) {
-  main {
-    flex-direction: column;
-    align-items: center;
-  }
-  .vanding {
-    margin: 0 0 20px;
-  }
-  header {
-    margin-bottom: 10px;
-  }
-  header a {
-    width: 360px;
-  }
+.section3 {
+  display: flex;
+  flex-direction: column;
 }
-
-@media (max-width: 360px) {
-  body {
-    background: #fff;
-  }
-
-  header {
-    margin-bottom: 18px;
-  }
-  header a {
-    width: 166px;
-    height: 78px;
-  }
-  .vanding,
-  .box1,
-  .box2 {
-    padding-top: 0px;
-    padding-bottom: 0px;
-  }
-  .vanding,
-  .box2 {
-    height: auto;
-  }
-  /* .box1 {
-    margin: 0;
-  } */
+.section3 .get-list {
+  flex-grow: 1;
 }
